# playwright-scraper

./: .gitignore  README.md  image_urls.txt  json3.json  old-example.json  page_content.json  page_text.txt  playwright_script.py  playwright_with_table.py  pyproject.toml  requirements.txt  scraper.py  table_data.csv  table_data2.csv
