[project]
name = "web-scrapping"
version = "0.1.0"
description = ""
authors = [
    {name = "sohayla",email = "sohayla@cloudai.solutions"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
